assets/stylesheet.css
* {
  -webkit-appearance: none;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

html,
body {
  background: black;
  color: white;
  height: 100%;
  width: 100%;
  position: absolute;
  display: table;
}

h1 {
  font-size: 1.6em;
}

h2 {
  font-size: 1.4em;
}

h3 {
  font-size: 1.2em;
}

a {
  text-decoration: none;
  color: inherit;
}

header {
  height: 3em;
}

input {
  font-size: 1em;
  border-radius: 0.6em;
  border-width: 0;
}

button {
  font-size: 1em;
  background-color: white;
  border-style: solid;
  border-color: black;
  padding: 0.6em;
  border-radius: 0.6em;
}

main {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100vh;
  width: 100vw;
  font-size: 12pt;
  text-align: center;
  vertical-align: middle;
  margin: 0 auto;
  max-width: 48em;
  overflow: hidden;
}

*::-webkit-scrollbar {
  display: none;
}

li {
  margin: 0 auto;
  list-style-type: none;
}

.domination {
  width: 100%;
  height: 83vh;
}

.title {
  min-width: 6em;
  float: left;
}

.player-name {
  min-width: 6em;
  float: left;
}

.iteration {
  min-width: 2em;
  float: right;
}

.title,
.player-name,
.iteration {
  display: inline-block;
}

button span,
.hud span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.tool-tip {
  white-space: normal;
  position: absolute;
  z-index: 110;
  width: 10em;
  left: -2em;
}

.container {
  display: inline-block;
  height: 7vh;
  margin: 0 auto;
}

.hud {
  width: 100%;
  height: 20vh;
  text-align: center;
  vertical-align: middle;
  z-index: 100;
  background-color: black;
}

.chat {
  height: 18vh;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  z-index: 400;
  background-color: black;
}

.chat-history {
  text-align: left;
  color: black;
  border-radius: 0.5em;
  background-color: darkgray;
  height: 10vh;
  width: 100%;
  line-height: 1em;
  overflow-y: scroll;
  display: flex;
  flex-direction: column-reverse;
}

.chat-form {
  overflow: hidden;
}

.chat-form input {
  width: 85%;
  height: 7vh;
  border-radius: 0.5em;
}

.chat-form span {
  display: block;
  overflow: hidden;
}

.chat-form button {
  height: 7vh;
  width: 15%;
  float: right;
}

.chat-form input,
.chat-form button {
  box-sizing: border-box;
}

.incrementer {
  display: inline-block;
  margin: 0 auto;
}

.incrementer button,
.incrementer input {
  height: 7vh;
  width: 10vw;
  max-width: 3em;
  text-align: center;
  background-color: white;
}

.stack {
  position: relative;
  display: inline-block;
  vertical-align: top;
}

.stack-count {
  position: absolute;
  top: 2.5em;
  left: 0.1em;
  width: 1.5em;
  height: 1.5em;
  line-height: 1.5em;
  font-weight: bold;
  text-align: center;
  vertical-align: center;
  font-size: 1.25em;
  color: white;
  border-radius: 1em;
  background-color: black;
  opacity: 0.5;
  z-index: 1;
}

.card {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 6em;
  padding: 0;
  border: 1px solid black;
}

.username-input input {
  height: 7vh;
  width: 50vw;
}

.connections {
  position: absolute;
  right: 1vw;
  bottom: 10vh;
  line-height: 7vh;
  height: 7vh;
  width: 7vh;
  border-radius: 4vh;
  font-weight: bold;
  text-align: center;
  vertical-align: center;
  font-size: 1.25em;
  color: white;
  background-color: black;
  opacity: 0.5;
}

.settings-button {
  background-color: black;
  float: right;
  width: 3em;
  border-radius: 3em;
  height: 7vh;
  padding: 0;
}

.title-bar {
  height: 7vh;
  line-height: 7vh;
}

.settings-menu {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 500;
  background-color: black;
  transition: max-height 0.5s ease;
  overflow: hidden;
}

.settings-menu.showing {
  max-height: 100vh;
}

.settings-menu.collapsed {
  max-height: 0;
}

.new-game-button,
.load-game-button {
  height: 7vh;
}

.toggle-long-game {
  display: flex;
  align-items: center;
  justify-content: center;
}

.toggle-long-game input {
  -webkit-appearance: checkbox;
  width: 2em;
  height: 2em;
  margin-right: 0.5em;
}

.kingdom {
  overflow-y: scroll;
  height: 58vh;
}

.kingdom .inactive {
  background-color: dimgray;
}

.settings-menu .back-button-container {
  display: flex;
}

.supply-toggle {
  display: inline-block;
  width: 25%;
  height: 100%;
  padding: 0;
}

.supply.collapsed {
  max-height: 0;
}

.supply.showing {
  max-height: 49vh;
}

.supply {
  position: absolute;
  overflow-y: scroll;
  height: 100%;
  width: 100%;
  transition: max-height 0.5s ease;
  z-index: 100;
}

.hand {
  width: 100%;
  height: 29vh;
  font-size: 2.4vh;
  overflow-x: scroll;
  white-space: nowrap;
}

.card-text {
  display: flex;
  justify-content: flex-end;
  padding-right: 0.2em;
  height: 1.55em;
  line-height: 1.55em;
}

.table {
  width: 100%;
  height: 20vh;
}

.play,
.buying {
  overflow-x: scroll;
  white-space: nowrap;
  font-size: 1.68vh;
  height: 20vh;
  display: inline-block;
  border-radius: 0.6em;
}

.play {
  width: 70%;
}

.buying {
  width: 30%;
}

.hand-title {
  position: absolute;
  font-size: 7vh;
  transform: rotate(-90deg) translate(-8vh, -3vh);
  opacity: 0.8;
}

.play-title,
.buying-title {
  position: absolute;
  font-size: 6vh;
  transform: rotate(-90deg) translate(-6.4vh, -2.4vh);
  opacity: 0.8;
}

.card-name {
  display: flex;
  white-space: normal;
  border: none;
  border-radius: 0.6em;
  border-bottom: 0.1em solid;
  align-items: center;
  justify-content: center;
  min-height: 2.2em;
  line-height: 1em;
}

.hand-infos {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 7vh;
  font-size: 5vh;
  width: 100%;
}

.hand-info {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.supply .hand-info {
  width: 50%;
}

.hud .hand-info {
  width: 20%;
}

.card-cost {
  border-bottom-left-radius: 0.6em;
  border-bottom-right-radius: 0.6em;
}

.card-cost:not(:empty) {
  border-top: 1px solid black;
  justify-content: flex-start;
  padding-left: 0.2em;
}
/* ... */

